Pr-Guidelines: Indicate this is for Bugzilla
This article has not been updated in years.  There is so much wrong,
that it will need to be tackled in multiple patches.

This first patch simply states that the article is Bugzilla-specific,
and that any use of "PR" means "Bugzilla Problem Report".  In a few
cases, this is now spelled out explicitly.

Discused with:		imp, lwhsu, ziaee
Differential Revision:	https://reviews.freebsd.org/D53645

--- a/documentation/content/en/articles/pr-guidelines/_index.adoc
+++ b/documentation/content/en/articles/pr-guidelines/_index.adoc
@@ -1,14 +1,15 @@
 ---
-title: Problem Report Handling Guidelines
+title: Problem Report Handling Guidelines With Bugzilla
 authors:
   - author: Dag-Erling Smørgrav
   - author: Hiten Pandya
+  - author: Mark Linimon
 description: These guidelines describe recommended handling practices for FreeBSD Problem Reports (PRs).
 trademarks: ["freebsd", "general"]
 tags: ["PR", "guideline", "bugs", "maintenance", "BugZilla", "FreeBSD"]
 ---
 
-= Problem Report Handling Guidelines
+= Problem Report Handling Guidelines With Bugzilla
 :doctype: article
 :toc: macro
 :toclevels: 1
@@ -42,8 +43,8 @@ endif::[]
 [.abstract-title]
 Abstract
 
-These guidelines describe recommended handling practices for FreeBSD Problem Reports (PRs).
-Whilst developed for the FreeBSD PR Database Maintenance Team mailto:freebsd-bugbusters@FreeBSD.org[freebsd-bugbusters@FreeBSD.org], these guidelines should be followed by anyone working with FreeBSD PRs.
+These guidelines describe recommended handling practices for FreeBSD Problem Reports (PRs) as submitted via Bugzilla.
+Whilst developed for the FreeBSD Bugzilla Database Maintenance Team mailto:freebsd-bugbusters@FreeBSD.org[freebsd-bugbusters@FreeBSD.org], these guidelines should be followed by anyone working with FreeBSD Problem Reports.
 
 '''
 
@@ -58,28 +59,30 @@ As accurate tracking of outstanding software defects is important to FreeBSD's q
 Access to Bugzilla is available to the entire FreeBSD community.
 In order to maintain consistency within the database and provide a consistent user experience, guidelines have been established covering common aspects of bug management such as presenting followup, handling close requests, and so forth.
 
+Note: in this Article, the term "PR" means "Bugzilla Problem Report".
+
 [[pr-lifecycle]]
 == Problem Report Life-cycle
 
 * The Reporter submits a bug report on the website. The bug is in the `Needs Triage` state.
 * Jane Random BugBuster confirms that the bug report has sufficient information to be reproducible. If not, she goes back and forth with the reporter to obtain the needed information. At this point the bug is set to the `Open` state.
-* Joe Random Committer takes interest in the PR and assigns it to himself, or Jane Random BugBuster decides that Joe is best suited to handle it and assigns it to him. The bug should be set to the `In Discussion` state.
+* Joe Random Committer takes interest in the report and assigns it to himself, or Jane Random BugBuster decides that Joe is best suited to handle it and assigns it to him. The bug should be set to the `In Discussion` state.
 * Joe has a brief exchange with the originator (making sure it all goes into the audit trail) and determines the cause of the problem.
-* Joe pulls an all-nighter and whips up a patch that he thinks fixes the problem, and submits it in a follow-up, asking the originator to test it. He then sets the PRs state to `Patch Ready`.
+* Joe pulls an all-nighter and whips up a patch that he thinks fixes the problem, and submits it in a follow-up, asking the originator to test it. He then sets the report's state to `Patch Ready`.
 * A couple of iterations later, both Joe and the originator are satisfied with the patch, and Joe commits it to `-CURRENT` (or directly to `-STABLE` if the problem does not exist in `-CURRENT`), making sure to reference the Problem Report in his commit log (and credit the originator if they submitted all or part of the patch) and, if appropriate, start an MFC countdown. The bug is set to the `Needs MFC` state.
-* If the patch does not need MFCing, Joe then closes the PR as `Issue Resolved`.
+* If the patch does not need MFCing, Joe then closes the report as `Issue Resolved`.
 
 [NOTE]
 ====
-Many PRs are submitted with very little information about the problem, and some are either very complex to solve, or just scratch the surface of a larger problem; in these cases, it is very important to obtain all the necessary information needed to solve the problem.
-If the problem contained within cannot be solved, or has occurred again, it is necessary to re-open the PR.
+Many reports are submitted with very little information about the problem, and some are either very complex to solve, or just scratch the surface of a larger problem; in these cases, it is very important to obtain all the necessary information needed to solve the problem.
+If the problem contained within cannot be solved, or has occurred again, it is necessary to re-open the report.
 ====
 
 [[pr-states]]
 == Problem Report State
 
-It is important to update the state of a PR when certain actions are taken.
-The state should accurately reflect the current state of work on the PR.
+It is important to update the state of a Problem Report when certain actions are taken.
+The state should accurately reflect the current state of work on the issue.
 
 .A small example on when to change PR state
 [example]
@@ -452,7 +455,7 @@ This will help to avoid the case where no one looks at fixing a particular probl
 | Suggested Assignee
 | Assignee Type
 
-|problem with PR database
+|problem with Problem Report database
 |bin
 |bugmeister
 |alias
@@ -512,4 +515,4 @@ Setting the category to `junk` makes it obvious that there is no useful content 
 This is a list of resources relevant to the proper writing and processing of problem reports.
 It is by no means complete.
 
-* extref:{problem-reports}[How to Write FreeBSD Problem Reports]-guidelines for PR originators.
+* extref:{problem-reports}[How to Write FreeBSD Problem Reports]-guidelines for Problem Report originators.
