Pr-Guidelines: Remove obsolete information
As another part of bringing this article into the current century,
remove information about obsolete architectures and drivers.

Reviewed by:		imp, lwhsu, ziaee
Differential Revision:	https://reviews.freebsd.org/D53646

--- a/documentation/content/en/articles/pr-guidelines/_index.adoc
+++ b/documentation/content/en/articles/pr-guidelines/_index.adoc
@@ -153,8 +153,16 @@ Here is the current list, with the most common ones listed first:
 |freebsd-bugs
 
 |architecture-specific
-|alpha, amd64, arm, i386, ia64, powerpc, sparc64
+|arm, amd64, i386, mips
 |freebsd-_arch_
+
+|architecture-specific: powerpc
+|powerpc64
+|freebsd-ppc
+
+|architecture-specific: riscv64
+|riscv64
+|freebsd-risc
 
 |ports collection
 |ports
@@ -245,11 +253,6 @@ Here is a sample list of such entities; it is probably not complete.
 |freebsd-acpi
 |mailing list
 
-|problem with Asynchronous Transfer Mode (ATM) drivers
-|kern
-|freebsd-atm
-|mailing list
-
 |problem with embedded or small-footprint FreeBSD systems (e.g., NanoBSD/PicoBSD/FreeBSD-arm)
 |kern
 |freebsd-embedded
@@ -273,11 +276,6 @@ Here is a sample list of such entities; it is probably not complete.
 |problem with the man:ipfw[4] subsystem
 |kern
 |freebsd-ipfw
-|mailing list
-
-|problem with Integrated Services Digital Network (ISDN) drivers
-|kern
-|freebsd-isdn
 |mailing list
 
 |man:jail[8] subsystem
