summerofcode: Equalize section nesting
This is how it was rendering, and how it was written was erroring.

Fixes:	e33d3d33c29e (GSoC: Add link to 2025 projects wiki page)

--- a/website/content/en/projects/summerofcode.adoc
+++ b/website/content/en/projects/summerofcode.adoc
@@ -48,7 +48,7 @@ These pages exist to help provide inspiration.
 Another place to look for project ideas about upcoming development projects in FreeBSD is the link:../../status/[FreeBSD Status Reports].
 Contributors are also welcome, and are indeed encouraged, to propose your own ideas, and if the proposal is strong, we'll try to match you with a mentor!
 
-==== Past Projects
+== Past Projects
 
 For inspiration, here are the projects wiki pages from previous years:
 https://wiki.FreeBSD.org/SummerOfCode2025Projects[2025],
@@ -85,7 +85,7 @@ The objective of the proposal is to identify what is to be done, explain why thi
 
 A strong proposal will include (at least):
 
-=== General Information
+== General Information
 
 * *Name*
 * *Email*
@@ -112,7 +112,7 @@ Have you completed courses that will be relevant to your project idea? What do y
 Optional, but highly recommended.
 Do not put a name here if you have not contacted them.
 
-=== Project Information
+== Project Information
 
 * *Project Title*
 +
