--- a/website/content/en/releases/15.0R/hardware.adoc
+++ b/website/content/en/releases/15.0R/hardware.adoc
@@ -339,9 +339,10 @@ RAID controllers from the Adaptec AAC family:
 
 
 
-Controllers supported by the
+The
 **aacraid**
-driver include:
+driver supports the following
+Adaptec 6G and 12G SAS/SATA RAID controllers:
 
 *	Adaptec ASR-6405(T|E)
 *	Adaptec ASR-6445
@@ -679,9 +680,10 @@ not known what the chipset can do and how to program it.
 
 
 
-Controllers supported by the
+The
 **ciss**
-driver include:
+driver supports controllers implementing
+Common Interface for SCSI-3 Support Open Specification v1.04, including:
 
 *	Compaq Smart Array 5300 (simple mode only)
 *	Compaq Smart Array 532
@@ -709,6 +711,7 @@ driver include:
 *	HP Smart Array P430
 *	HP Smart Array P430i
 *	HP Smart Array P431
+*	HP Smart Array P440ar
 *	HP Smart Array P530
 *	HP Smart Array P531
 *	HP Smart Array P600
@@ -1129,6 +1132,12 @@ driver supports NVMe
 storage devices connected via PCIe or over NVMF
 (NVMe over Fabric)
 via the CAM subsystem.
+
+
+
+The
+**nvd**
+driver supports NVMe storage devices using NVMe namespaces.
 
 
 
@@ -1919,15 +1928,58 @@ The man:gve[4] driver supports the Google Cloud Compute Engine (GCE) Virtual NIC
 
 The
 **ice**
-driver supports the Intel Ethernet 800 series.
-Some adapters in this series with SFP28/QSFP28 cages
-have firmware that requires that Intel qualified modules are used; these
-qualified modules are listed below.
+driver supports the following
+Intel 800 series 1Gb to 200Gb Ethernet controllers:
+
+*	Intel Ethernet Controller E810-C
+*	Intel Ethernet Controller E810-XXV
+*	Intel Ethernet Connection E822-C
+*	Intel Ethernet Connection E822-L
+*	Intel Ethernet Connection E823-C
+*	Intel Ethernet Connection E823-L
+*	Intel Ethernet Connection E825-C
+*	Intel Ethernet Connection E830-C
+*	Intel Ethernet Connection E830-CC
+*	Intel Ethernet Connection E830-L
+*	Intel Ethernet Connection E830-XXV
+*	Intel Ethernet Connection E835-C
+*	Intel Ethernet Connection E835-CC
+*	Intel Ethernet Connection E835-L
+*	Intel Ethernet Connection E835-XXV
+
+The
+**ice**
+driver supports some adapters in this series with SFP28/QSFP28 cages
+which have firmware that requires that Intel qualified modules are used;
+these qualified modules are listed below.
 This qualification check cannot be disabled by the driver.
 
 The
 **ice**
 driver supports 100Gb Ethernet adapters with these QSFP28 modules:
+
+*	Intel 100G QSFP28 100GBASE-SR4   E100GQSFPSR28SRX
+*	Intel 100G QSFP28 100GBASE-SR4   SPTMBP1PMCDF
+*	Intel 100G QSFP28 100GBASE-CWDM4 SPTSBP3CLCCO
+*	Intel 100G QSFP28 100GBASE-DR    SPTSLP2SLCDF
+
+The
+**ice**
+driver supports 25Gb and 10Gb Ethernet adapters with these SFP28 modules:
+
+*	Intel 10G/25G SFP28 25GBASE-SR E25GSFP28SR
+*	Intel     25G SFP28 25GBASE-SR E25GSFP28SRX (Extended Temp)
+*	Intel     25G SFP28 25GBASE-LR E25GSFP28LRX (Extended Temp)
+
+The
+**ice**
+driver supports 10Gb and 1Gb Ethernet adapters with these SFP+ modules:
+
+*	Intel 1G/10G SFP+ 10GBASE-SR E10GSFPSR
+*	Intel 1G/10G SFP+ 10GBASE-SR E10GSFPSRG1P5
+*	Intel 1G/10G SFP+ 10GBASE-SR E10GSFPSRG2P5
+*	Intel    10G SFP+ 10GBASE-SR E10GSFPSRX (Extended Temp)
+*	Intel 1G/10G SFP+ 10GBASE-LR E10GSFPLR
 
 
 
@@ -4481,16 +4533,6 @@ driver supports USB Mass Storage devices such as:
 *	USB hard disk drives
 *	USB floppy drives
 
-
-[amd64, i386] Hubs
-
-[amd64, i386] Miscellaneous
-
-* Assist Computer Systems PC Camera C-M1
-* ActiveWire I/O Board
-* Creative Technology Video Blaster WebCam Plus
-* D-Link DSB-R100 USB Radio (man:ufm[4] driver)
-* Mirunet AlphaCam Plus
 
 
 The following devices are supported by the
